# piaic-q1

Python/PythonWithBilalFareed/Poetry/1.basics/: pyproject.toml
Python/PythonWithSirQasim/first_project/: pyproject.toml
Python/PythonWithSirQasim/first_project/first_project/: main.py
Python/PythonWithSirQasim/first_project/tests/: test_main.py
Python/pythonWithHitesh/02_conditional_problems/: 03_solution.py  07_solution.py  08_solution.py  09_solution.py  10_solution.py
Python/pythonWithHitesh/03_loops-problems/: 02_solution.py  03_solution.py  04_solution.py  05_solution.py  06_solution.py  07_solution.py  08_solution.py  09_solution.py  10_solution.py
piaic-practice/: Dockerfile
piaic-practice/docker-image-hello-world/: Dockerfile
piaic-practice/jupyter-hello-world-yt/.devcontainer/: devcontainer.json
piaic-practice/jupyter-hello-world/.devcontainer/: devcontainer.json  hello_world.ipynb
