[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["huzair <huzairahmedkhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
